gitops/apps/microservices-platform/azure/prod/shared-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ingress
  namespace: microservices-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /prod/api
            pathType: Prefix
            backend:
              service:
                name: api-stable-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-prod-azure-v2-frontend
                port:
                  number: 80
